[package]
name = "claude-quota-router"
version = "0.1.0"
edition = "2024"
description = "Quota-aware Claude Code account router for macOS"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
